# mc_OpenVR_plugin

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md
.github/workflows/: build.yml
etc/: OpenVRPlugin.in.yaml
include/OpenVRPlugin/: OpenVRData.h  OpenVRDataPublisher.h  OpenVRDataReceiver.h  boost_serialization.h  serialize.h
module/: CMakeLists.txt
module/alias/: vive_tracker.in.yaml
module/meshes/: vive_tracker.stl
module/urdf/: vive_tracker.in.urdf  vive_tracker_blue.in.urdf  vive_tracker_green.in.urdf  vive_tracker_red.in.urdf
module/yaml/: vive_tracker.in.yaml
src/: OpenVRData.cpp  OpenVRPlugin.cpp  OpenVRPlugin.h  PluginLink.cpp
tests/etc/: mc_rtc.yaml
